--- a/frontend/src/components/LogoCreateModal/style.css
+++ b/frontend/src/components/LogoCreateModal/style.css
@@ -1,7 +1,7 @@
 .logo-create-modal .modal-dialog .modal-content {
     min-height: 70vh;
     max-height: 70vh;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .logo-modal-body {
