Generalize fancy buttons and introduce PushButtons; fix 403 error handling in BE and FE; ask before close if there are unsaved changes; minor UI enhancements

--- a/frontend/src/components/LogoCard/style.css
+++ b/frontend/src/components/LogoCard/style.css
@@ -1,3 +1,13 @@
+.one-line-no-wrap {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 .logo-card-image, .logo-card {
     -webkit-transition: all 0.8s ease; /* Safari and Chrome */
     -moz-transition: all 0.8s ease; /* Firefox */
